--- a/newslyapp/src/app/features/admin/news/news-list/news-list.component.html
+++ b/newslyapp/src/app/features/admin/news/news-list/news-list.component.html
@@ -1,12 +1,12 @@
 <div class="width-full">
     <div style="box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); border-radius: 10px;">
         <div class="d-flex justify-content-between align-items-center padding-20px list-header" style="background-color: #8584f6;">
-            <span class="text-white font-size-2xl font-size-md">Haber <span class="font-weight-bold">İşlemleri</span></span>
+            <h1 class="text-white font-size-2xl font-size-md font-weight-medium">Haber <span class="font-weight-bold">İşlemleri</span></h1>
             <div class="custom-button" [routerLink]="'create'">
                 <span class="icon-container">
                     <i class="fa-solid fa-square-plus"></i>
                 </span>
-                <span class="button-text">EKLE</span>
+                <p class="button-text">EKLE</p>
             </div>
         </div>
         <div class="bg-indigo pl-20px pr-20px pt-20px list-body" style="box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
