--- a/newslyapp/src/app/features/admin/news/news-update/news-update.component.html
+++ b/newslyapp/src/app/features/admin/news/news-update/news-update.component.html
@@ -1,1 +1,6 @@
-<p>news-update works!</p>
+<div class="text-off-white mb-30px">
+    <h1>Haber Ayarları</h1>
+   </div>
+  <div>
+    <app-form-editor (itemSubmit)="onSubmit($event)" [news]="news" [btnTitle]="'Güncelle'"></app-form-editor>
+  </div>
