--- a/newslyapp/src/app/features/users/news/news-detail/news-detail.component.html
+++ b/newslyapp/src/app/features/users/news/news-detail/news-detail.component.html
@@ -12,9 +12,9 @@
         </span>
       </div>
       <div class="pt-25px pb-25px font-weight-bolder ">
-        <h1 class="font-size-32px letter-spacing-medium line-height-xxl">{{news?.title}}</h1>
+        <h1 class="title font-size-32px letter-spacing-medium line-height-xxl">{{news?.title}}</h1>
       </div>
-      <div class="content" [innerHTML]="news?.content">
+      <div class="content theme-text" [innerHTML]="news?.content">
       </div>
     </div>
   </div>
