--- a/newslyapp/src/app/shared/components/card/card.component.html
+++ b/newslyapp/src/app/shared/components/card/card.component.html
@@ -8,6 +8,6 @@
             <span class="color-gray font-weight-semibold font-size-xs">{{data.author}}</span>
             <span class="color-gray font-size-xxs font-weight-normal">{{data.date}}</span>
         </div>
-        <p class="font-size-lg pt-20px pb-10px font-weight-bold cursor-pointer">{{data.title | truncate}}</p>
+        <p class="theme-text font-size-lg pt-20px pb-10px font-weight-bold cursor-pointer">{{data.title | truncate}}</p>
     </div>
 </div>
