--- a/newslyapp/src/app/shared/components/location/location.component.html
+++ b/newslyapp/src/app/shared/components/location/location.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex cursor-pointer" *ngIf="city">
   <img src="assets/img/header/cloudy.png" class="width-22px">
-  <p class="ml-5px line-height-sm font-size-11px font-weight-bold letter-spacing-spaced text-uppercase">{{ city }} 22°
+  <p class="theme-text ml-5px line-height-sm font-size-11px font-weight-bold letter-spacing-spaced text-uppercase">{{ city }} 22°
   </p>
 </div>
