--- a/newslyapp/src/app/shared/components/not-found/not-found.component.html
+++ b/newslyapp/src/app/shared/components/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <div class="max-width-1200px margin-auto">
     <div class="text-align-center mt-70px">
         <img class="" src="assets/img/404.png" style="width: 50%;">
-        <p>Sayfa Bulunamadı</p>
+        <p class="theme-text">Sayfa Bulunamadı</p>
         <div class="bg-orange width-250px margin-auto pt-25px pb-25px border-radius-15px cursor-pointer" routerLink="/">
             <span class="text-white font-weight-bold font-size-3xl letter-spacing-custom">Ana Sayfa</span>
         </div>
