--- a/newslyapp/src/app/shared/components/slider/slider.component.html
+++ b/newslyapp/src/app/shared/components/slider/slider.component.html
@@ -1,8 +1,8 @@
 <div class="width-full position-relative">
     <ul class="m-0 p-0">
         <div class="d-flex justify-content-between align-items-center slider-text">
-            <p class="pl-25px font-size-3xl font-weight-bolder">Ne Oldu?</p>
-            <p class="pr-25px font-size-xs font-weight-bold text-uppercase letter-spacing-wide">{{getFormattedCategories()}} Haberleri</p>
+            <p class="theme-text pl-25px font-size-3xl font-weight-bolder">Ne Oldu?</p>
+            <p class="theme-text pr-25px font-size-xs font-weight-bold text-uppercase letter-spacing-wide">{{getFormattedCategories()}} Haberleri</p>
         </div>
 
         <div class="keen-slider" #sliderRef>   
@@ -16,7 +16,7 @@
                         <span class="color-gray font-weight-semibold font-size-xs">{{news.author}}</span>
                         <span class="color-gray font-size-xxs font-weight-normal">{{news.date}}</span>
                     </div>
-                    <p class="font-size-lg pt-20px pb-10px font-weight-bold">{{news.title | truncate}}</p>
+                    <p class="theme-text font-size-lg pt-20px pb-10px font-weight-bold">{{news.title | truncate}}</p>
                 </div>
             </li>
         </div>
