feat: amcharts has been added. components have been created. the template for the dashboard page has been created and responsive compatibility has been ensured.

--- a/newslyapp/src/app/features/admin/news/news-list/news-list.component.html
+++ b/newslyapp/src/app/features/admin/news/news-list/news-list.component.html
@@ -28,7 +28,7 @@
                             <td>{{ news.title | truncate:32 }}</td>
                             <td>{{ news.author }}</td>
                             <td>{{ news.categoryName }}</td>
-                            <td>{{ news.date }}</td>
+                            <td>{{ news.date | timeAgo }}</td>
                             <td class="text-align-center">
                                 <i class="fa-solid fa-gear font-size-xl pr-5px cursor-pointer" [routerLink]="['edit', news.id]"></i>
                                 <i class="fa-solid fa-ban font-size-xl pl-5px cursor-pointer" (click)="deleteNews(news.id)"></i>
