--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.html
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.html
@@ -16,35 +16,35 @@
                     </a>
                     <a class="text-decoration-none text-lavender font-weight-medium font-size-md">
                         <li class="cursor-pointer pl-15px pt-20px pb-20px mb-5px mt-5px line-height-tight"
-                            [routerLink]="['news-update']" routerLinkActive="active">
+                            [routerLink]="['popular-news']" routerLinkActive="active">
                             <i class="fa-solid fa-fire pr-5px"></i>
                             Popüler Haberler
                         </li>
                     </a>
                     <a class="text-decoration-none text-lavender font-weight-medium font-size-md">
                         <li class="cursor-pointer pl-15px pt-20px pb-20px mb-5px mt-5px line-height-tight"
-                            routerLink="/admin/data-analysis" routerLinkActive="active">
+                            [routerLink]="['data-analysis']" routerLinkActive="active">
                             <i class="fa-solid fa-chart-pie pr-5px"></i>
                             Veri Analizi
                         </li>
                     </a>
                     <a class="text-decoration-none text-lavender font-weight-medium font-size-md">
                         <li class="cursor-pointer pl-15px pt-20px pb-20px mb-5px mt-5px line-height-tight"
-                            routerLink="/admin/news-comments" routerLinkActive="active">
+                            [routerLink]="['news-comments']" routerLinkActive="active">
                             <i class="fa-solid fa-comment pr-5px"></i>
                             Haber Yorumları
                         </li>
                     </a>
                     <a class="text-decoration-none text-lavender font-weight-medium font-size-md">
                         <li class="cursor-pointer pl-15px pt-20px pb-20px mb-5px mt-5px line-height-tight"
-                            routerLink="/admin/features" routerLinkActive="active">
+                            [routerLink]="['features']" routerLinkActive="active">
                             <i class="fa-solid fa-list-check pr-5px"></i>
                             Özellikler
                         </li>
                     </a>
                     <a class="text-decoration-none text-lavender font-weight-medium font-size-md">
                         <li class="cursor-pointer pl-15px pt-20px pb-20px mb-5px mt-5px line-height-tight"
-                            routerLink="/admin/settings" routerLinkActive="active">
+                            [routerLink]="['settings']" routerLinkActive="active">
                             <i class="fa-solid fa-gear pr-5px"></i>
                             Genel Ayarlar
                         </li>
@@ -53,5 +53,4 @@
             </div>
         </div>
     </div>
-
 </div>
