--- a/newslyapp/src/app/features/admin/dashboard/dashboard.component.html
+++ b/newslyapp/src/app/features/admin/dashboard/dashboard.component.html
@@ -1,9 +1,38 @@
-<div class="d-flex justify-content-between">
-    <div class="width-500px height-400px border-radius-15px" style="background-color: #110d3e;">
-
+<div class="dashboard-info">
+    <div class="d-flex align-items-center item-card border-radius-8px">
+        <img class="max-width-80px height-auto ml-30px" src="assets/img/admin/dashboard.png">
+        <div class="d-block text-align-center flex-grow-1" style="margin-left: auto;">
+            <p class="text-lavender font-size-2xl mb-0">Haber</p>
+            <p class="text-white font-size-2xl font-weight-bold">{{news.length}}</p>
+        </div>
     </div>
-    <div class="width-500px height-300px border-radius-15px" style="background-color: #110d3e;">
-
+    <div class="d-flex align-items-center item-card border-radius-8px">
+        <img class="max-width-80px height-auto ml-30px" src="assets/img/admin/dashboard2.png">
+        <div class="d-block text-align-center flex-grow-1" style="margin-left: auto;">
+            <p class="text-lavender font-size-2xl mb-0">Popüler Haber</p>
+            <p class="text-white font-size-2xl font-weight-bold">9</p>
+        </div>
     </div>
-    
+    <div class="d-flex align-items-center item-card border-radius-8px">
+        <img class="max-width-80px height-auto ml-30px" src="assets/img/admin/dashboard.png">
+        <div class="d-block text-align-center flex-grow-1" style="margin-left: auto;">
+            <p class="text-lavender font-size-2xl mb-0">Kategori</p>
+            <p class="text-white font-size-2xl font-weight-bold">{{categories.length}}</p>
+        </div>
+    </div>
+    <div class="d-flex align-items-center item-card border-radius-8px">
+        <img class="max-width-80px height-auto ml-30px" src="assets/img/admin/dashboard.png">
+        <div class="d-block text-align-center flex-grow-1" style="margin-left: auto;">
+            <p class="text-lavender font-size-2xl mb-0">Aktif Kullanıcı</p>
+            <p class="text-white font-size-2xl font-weight-bold">324</p>
+        </div>
+    </div>
+</div>
+<div class="d-flex width-full flex-column" style="gap:15px;">
+    <div class="height-500px border-radius-8px width-50 card" style="background-color: #110d3e;">
+        <app-drag-bars></app-drag-bars>
+    </div>
+    <div class="height-500px border-radius-8px width-50 card" style="background-color: #110d3e;">
+        <app-date-chart></app-date-chart>
+    </div>
 </div>
