feat: token generation implemented, guard structure created, charts added, responsive adjustments made.

--- a/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
+++ b/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
@@ -3,6 +3,7 @@
     <div class="form-group">
       <label class="form-control-label" for="category">Kategori</label>
       <select formControlName="categoryName">
+        <option value="">Seçiniz</option>
         <option *ngFor="let item of categories" [value]="item.name">{{item.name}}</option>
       </select>
     </div>
