--- a/newslyapp/src/assets/css/color2.scss
+++ b/newslyapp/src/assets/css/color2.scss
@@ -12,9 +12,9 @@ $colors: (
   'panel': #15171a,
   '404' : #12161b,
   'off-white' : #c7cbd1,
-  'admin-footer': #2c2a29,
+  'dark-indigo': #110d3e,
   'lavender': #9799b5,
-  'indigo': #110d3e,
+  'indigo': #211d52,
   'admin-card': #8584f6
 );
 
