--- a/newslyapp/src/app/features/auth/login/login.component.html
+++ b/newslyapp/src/app/features/auth/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="height-100vh d-flex align-items-center justify-content-center container">
-    <div class="width-full max-width-700px border-radius-8px login-page">
+<div class="height-100vh d-flex align-items-center justify-content-center bg-indigo">
+    <div class="width-full max-width-700px border-radius-8px bg-dark-indigo login-page">
         <div class="text-align-center pt-25px">
             <img class="width-100px height-auto" src="assets/img/admin/login_key.png">
             <h2 class="letter-spacing-2px font-size-3xl pt-15px">ADMİN PANEL</h2>
@@ -8,11 +8,11 @@
             <form class="width-full pr-30px pl-30px"  #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
                 <div class="form-group">
                     <label class="form-control-label">E-Posta</label>
-                    <input type="text" id="email" name="email" ngModel required class="form-control">
+                    <input autocomplete="off" type="text" id="email" name="email" ngModel required class="form-control">
                 </div>
                 <div class="form-group">
                     <label class="form-control-label">Şifre</label>
-                    <input type="password" id="password" name="password" ngModel required minlength="6" class="form-control">
+                    <input autocomplete="off" type="password" id="password" name="password" ngModel required minlength="6" class="form-control">
                 </div>
                 <div style="float: right;">
                     <button type="submit" class="btn btn-outline-primary">GİRİŞ</button>
