--- a/newslyapp/src/app/features/auth/login/login.component.scss
+++ b/newslyapp/src/app/features/auth/login/login.component.scss
@@ -1,15 +1,17 @@
-.container{
-  background: #222D32;
+$primary-color: #8584f6;
+$secondary-color: #c7cbd1;
+$border-color: #5e5b7b;
+$font-family: 'Inter', sans-serif;
+$tertiary-color: #9799b5;
 
-  .login-page{
+ .login-page{
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23); 
-    background-color: #2c2a29;
     @media (max-width: 768px) {
       margin: 0 20px;
   }
 
   h2{
-    color: #c7cbd1;
+    color: $secondary-color;
   }
   
     .login-form {
@@ -28,7 +30,7 @@
         display: block;
         margin-bottom: 5px;
         font-size: 12px;
-        color: #6C6C6C;
+        color: $border-color;
         font-weight: bold;
         letter-spacing: 1px;
       }
@@ -38,26 +40,26 @@
         width: 100%;
         background-color: transparent;
         border: none;
-        border-bottom: 2px solid #0DB8DE;
+        border-bottom: 2px solid $primary-color;
         font-weight: bold;
         outline: 0;
         padding-left: 0;
-        color: #ECF0F5;
+        color: $secondary-color;
         padding-bottom: 10px;
     
         &:focus {
           border-color: inherit;
           box-shadow: none;
-          border-bottom: 2px solid #0DB8DE;
+          border-bottom: 2px solid $primary-color;
           background-color: transparent;
-          color: #d2d3d3;
+          color: $secondary-color;
         }
       }
     
       .btn-outline-primary {
-        border-color: #0DB8DE;
+        border-color: $primary-color;
         background: transparent;
-        color: #0DB8DE;
+        color: $primary-color;
         border-radius: 0px;
         font-weight: 800;
         letter-spacing: 1px;
@@ -67,12 +69,11 @@
         transition: all .15s ease-in-out;
     
         &:hover {
-          background-color: #0DB8DE;
+          background-color: $primary-color;
           right: 0px;
           color: #fff;
         }
       }
     }
   }
-}
 
