--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.scss
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.scss
@@ -11,6 +11,48 @@
     transition: margin-left 0.5s ease;
 
     @media (max-width: 768px) {
-        margin-left: 10px; 
-      }
-  }
+        margin-left: 10px;
+    }
+}
+
+input {
+    @media (max-width: 300px) {
+        display: none;
+    }
+}
+
+$dropdown-color: white;
+$dropdown-shadow: rgba(0, 0, 0, 0.4);
+$primary-color: #8584f6;
+$secondary-color: #c7cbd1;
+$tertiary-color: #9799b5;
+
+.dropdown-menu {
+    position: absolute;
+    margin-top: 13px;
+    list-style: none;
+    z-index: 10;
+    padding: 0;
+    left: 0;
+    width: 150px;
+    transform: translateX(-80%);
+    &:before {
+        content: '';
+        position: absolute;
+        top: -8px;
+        right: 0; 
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 8px solid $primary-color; 
+    }
+    .dropdown-item {
+        background-color: $primary-color;
+        border-radius: 8px 0 8px 8px;
+        box-shadow: 0 4px 8px $dropdown-shadow;
+        padding: 15px 15px;
+        font-size: 16px;
+        cursor: pointer;
+        font-weight: 500;
+        color: $dropdown-color;
+    }
+}
