feat: design arrangement

--- a/newslyapp/src/app/features/admin/dashboard/components/smoothed-line/smoothed-line.component.html
+++ b/newslyapp/src/app/features/admin/dashboard/components/smoothed-line/smoothed-line.component.html
@@ -1,1 +1,1 @@
-<div id="linechart" style="width: 100%; height: 340px;"></div>
+<div class="cursor-pointer" id="linechart" style="width: 100%; height: 340px;"></div>
