--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.html
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-header/admin-header.component.html
@@ -1,17 +1,17 @@
 <div class="height-97px d-flex align-items-center justify-content-between">
-    <div class="toggle-sidebar text-gray disabled" (click)="openSidenav()">☰</div>
+    <div class="toggle-sidebar text-lavender disabled" (click)="openSidenav()">☰</div>
     <div class="flex-grow-1 "></div> 
     <div class="d-flex align-items-center">
         <div class="pr-15px">
-            <i class="fa-solid fa-magnifying-glass text-gray pr-10px font-size-xl"></i>
+            <i class="fa-solid fa-magnifying-glass text-lavender pr-10px font-size-xl"></i>
             <input 
-                class="border-none outline-none text-gray width-80px height-20px pl-5px" 
+                class="border-none outline-none text-lavender width-80px height-20px pl-5px" 
                 style="background-color: transparent;" 
                 placeholder="Şimdi ara..." 
                 aria-label="Arama alanı">
         </div>
         <div class="pr-15px">
-            <i class="fa-solid fa-bell text-gray pr-10px font-size-xl"></i>
+            <i class="fa-solid fa-bell text-lavender pr-10px font-size-xl"></i>
         </div>
         <div class="pr-25px position-relative display-inline-block">
             <img 
