--- a/newslyapp/src/app/features/admin/dashboard/components/date-chart/date-chart.component.html
+++ b/newslyapp/src/app/features/admin/dashboard/components/date-chart/date-chart.component.html
@@ -1,1 +1,1 @@
-<div id="chartdiv" style="width: 100%; height: 340px;"></div>
+<div class="cursor-pointer" id="chartdiv" style="width: 100%; height: 340px;"></div>
