--- a/newslyapp/src/app/features/admin/dashboard/components/drag-bars/drag-bars.component.html
+++ b/newslyapp/src/app/features/admin/dashboard/components/drag-bars/drag-bars.component.html
@@ -1,1 +1,1 @@
-<div id="categoryCharts" style="width: 100%; height: 340px"></div>
+<div class="cursor-pointer" id="categoryCharts" style="width: 100%; height: 340px"></div>
